# ShieldVault

./: .gitignore  Anchor.toml  BACKEND_SETUP.md  README.md  ShieldVault.jsx  claude-session.jsonl  fix_all.js  fix_params.js  fix_routes.js  fix_ui_all.js  generate_routes.js  package-lock.json  package.json  quick-start.sh  simple-start.sh  turbo.json
app/: globals.css  page.tsx  wallet-adapter.css
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
cipher-yield/: Anchor.toml  README.md
cipher-yield-app/: package-lock.json  package.json
cipher-yield/backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml
cipher-yield/backend/src/: server.ts
cipher-yield/tests/: cipher_vault.ts
lib/: api.ts
programs/cipher_vault/: Cargo.toml
programs/cipher_vault/src/: errors.rs  lib.rs
programs/cipher_vault/src/instructions/: close_hedge.rs  deposit.rs  emergency_withdraw.rs  initialize_vault.rs  mod.rs  open_hedge.rs  submit_proof.rs  withdraw.rs
programs/cipher_vault/src/state/: user_position.rs  vault.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/dashboard/: page.tsx
src/app/execution/: page.tsx
src/app/positions/: page.tsx
src/app/profile/: page.tsx
src/app/proofs/: page.tsx
src/app/signals/: page.tsx
src/app/strategies/: page.tsx
src/app/vault/: page.tsx
src/components/dashboard/: VaultOverview.tsx
src/components/layout/: Header.tsx
src/components/ui/: Card.tsx  MetricCard.tsx
src/providers/: WalletProvider.tsx
(+116 files in other folders)
