[package]
name = "cipher_vault"
version = "0.1.0"
description = "Privacy-preserving AI hedge vault on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cipher_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
